--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethereumjs-util": "^7.1.5",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
+    "lodash": "^4.17.21",
     "mb64-connect": "^2.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
